# surroundvirtualizer

./: .githubworkflows  .gitignore  CMakeLists.txt  README.md  SECURITY.md  build_script.bat
.github/workflows/: codeql.yml
HRTF Files/SADIE_D01/: SADIE_D01-44100.mhr  SADIE_D01-48000.mhr  SADIE_D01-96000.mhr  SADIE_D01_(Inverted_Y)-44100.mhr  SADIE_D01_(Inverted_Y)-48000.mhr  SADIE_D01_(Inverted_Y)-96000.mhr
HRTF Files/SADIE_D02/: SADIE_D02-44100.mhr  SADIE_D02-48000.mhr  SADIE_D02-96000.mhr  SADIE_D02_(Inverted_Y)-44100.mhr  SADIE_D02_(Inverted_Y)-48000.mhr  SADIE_D02_(Inverted_Y)-96000.mhr
app/: main.cpp
include/headers/: cli_interface.h  hrtf_library.h  hrtf_processor.h  openal_setup.h  portaudio_setup.h
lib/OpenALlibs/: desktop.ini
lib/OpenALlibs/lib/cmake/OpenAL/: OpenALTargets.cmake
lib/OpenALlibs/lib/pkgconfig/: openal.pc
lib/PortAudioLibs/lib/: portaudio_static_x64.lib  portaudio_x64.lib
lib/PortAudioLibs/lib/cmake/portaudio/: portaudioTargets-release.cmake  portaudioTargets.cmake
lib/PortAudioLibs/lib/pkgconfig/: portaudio-2.0.pc
src/: cli_interface.cpp  hrtf_library.cpp  hrtf_processor.cpp  openal_setup.cpp  portaudio_setup.cpp
